syntax = "proto3";
package auction_house_rs.backend;

import "google/protobuf/empty.proto";

service Backend {
    rpc DepositFunds(DepositFundsRequest) returns (google.protobuf.Empty);
    rpc WithdrawFunds(WithdrawFundsRequest) returns (google.protobuf.Empty);
    rpc ShowFunds(google.protobuf.Empty) returns (ShowFundsResponse);
    rpc DepositItem(DepositItemRequest) returns (google.protobuf.Empty);
    rpc WithdrawItem(WithdrawItemRequest) returns (google.protobuf.Empty);
    rpc ShowItems(google.protobuf.Empty) returns (ShowItemsResponse);
    rpc SellItem(SellItemRequest) returns (google.protobuf.Empty);
    rpc BidItem(BidItemRequest) returns (google.protobuf.Empty);
    rpc ListAuctions(google.protobuf.Empty) returns (ListAuctionsResponse);
    rpc WatchAuctions(google.protobuf.Empty) returns (stream ListAuctionsResponse);
    rpc WatchUserAuctions(google.protobuf.Empty) returns (stream WatchUserAuctionsResponse);
}

message DepositFundsRequest {
    uint64 amount = 1;
}

message WithdrawFundsRequest {
    uint64 amount = 1;
}

message ShowFundsResponse {
    uint64 funds = 1;
}

message DepositItemRequest {
    string item = 1;
}

message WithdrawItemRequest {
    string item = 1;
}

message ShowItemsResponse {
    repeated string items = 1;
}

message SellItemRequest {
    string item = 1;
    uint64 price = 2;
    uint64 duration = 3;
}

message BidItemRequest {
    string auction_id = 1;
    uint64 price = 2;
}

message Auction {
    string id = 1;
    string item = 2;
    uint64 price = 3;
    string seller = 4;
    string buyer = 5;
    uint64 created_at = 6;
    uint64 ends_at = 7;
}

message ListAuctionsResponse {
    repeated Auction auctions = 1;
}

message WatchUserAuctionsResponse {
    repeated Auction auctions = 1;
    repeated string expired_auctions = 2;
    repeated string finalized_auctions = 3;
}
